# Flappy

./: CMakeLists.txt
include/: Background.hpp  Draw.hpp  Player.hpp  TextureManager.hpp
include/Collisions/: CollisionEvent.hpp  CollisionManager.hpp  ICollidable.hpp
include/Core/: Game.hpp
include/Entities/: Background.hpp  Ground.hpp  Player.hpp
include/Entities/Pipes/: Pipe.hpp  PipePair.hpp
include/Events/: Event.hpp  EventDispatcher.hpp
include/Graphics/: Render.hpp  TextureManager.hpp
src/: Background.cpp  Draw.cpp  Player.cpp  TextureManager.cpp  main.cpp
src/Collisions/: CollisionEvent.cpp  CollisionManager.cpp  ICollidable.cpp
src/Core/: Game.cpp
src/Entities/: Background.cpp  Ground.cpp  Player.cpp
src/Entities/Pipes/: Pipe.cpp  PipePair.cpp
src/Events/: EventDispatcher.cpp
src/Graphics/: Render.cpp  TextureManager.cpp
